@@ -7,6 +7,7 @@
    <Action name="unpack" />
    <Action name="test archives" />
    <Action name="compare" />
+   <Action name="std_open_new" />
    <Action name="multirename" />
    <Action name="calculate" />
    <Action name="std_print" />
@@ -80,6 +81,7 @@
   <Action name="select group" />
   <Action name="select all" />
   <Action name="unselect all" />
+  <Action name="std_open_new" />
   <Action name="unpack" />
   <Action name="pack" />
   <Action name="compare" />
