@@ -1,4 +1,5 @@
 ======================
+    ADDED: Creating new files with SHIFT+F4
     ADDED: Russian translation (thanks to Dmitry Chernyak)
     ADDED: Ctrl+Enter and Ctrl+Shift+Enter keyboard shortcuts
     ADDED: default shortcut for refreshing the panel is Ctrl+R
